objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Big Tickets</relationshipLabel>
        <relationshipName>Trades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssetClass__c</fullName>
        <formula>Text(Product__r.AssetClass__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetSubClass__c</fullName>
        <formula>Text(Product__r.AssetSubClass__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Sub Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearingFirm__c</fullName>
        <description>Firm name that the trade cleared through</description>
        <label>Clearing Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Big Tickets</relationshipLabel>
        <relationshipName>Trades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Big Tickets</relationshipLabel>
        <relationshipName>Big_Tickets_R</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrossAmount__c</fullName>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberOfTickets__c</fullName>
        <label>Number of Tickets</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessDate__c</fullName>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <formula>Text(Product__r.ProductType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Trades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScrubDate__c</fullName>
        <label>Scrub Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SettleCode__c</fullName>
        <label>Settle Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeDate__c</fullName>
        <label>Trade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TradeID__c</fullName>
        <externalId>true</externalId>
        <label>Trade ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchases</fullName>
                </value>
                <value>
                    <fullName>Redemptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK('/'&amp; Id, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_based_on_ProcessDate__c</fullName>
        <description>Calculates the number of the weekday. Monday = 1</description>
        <formula>MOD(
ProcessDate__c -  DATE(1900,1,7) ,7
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of the Week based on Process Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofWeek__c</fullName>
        <description>Used in the Top 10 Big Ticket Purch All Terr Daily report to dynamically display the Previous Day process Date or Saturday, Sunday and Monday in 1 report. Monday = 1 and Sunday = 0</description>
        <formula>IF( Week_based_on_ProcessDate__c  =  2  &amp;&amp; of_the_Week_Today__c  = 3, TRUE, 
IF( Week_based_on_ProcessDate__c  =  3  &amp;&amp; of_the_Week_Today__c = 4, TRUE, 
IF( Week_based_on_ProcessDate__c  =  4  &amp;&amp; of_the_Week_Today__c = 5, TRUE, 
IF( Week_based_on_ProcessDate__c  =  1  &amp;&amp; of_the_Week_Today__c = 2, TRUE, 
IF( (Week_based_on_ProcessDate__c  =  5  || Week_based_on_ProcessDate__c  =  6  || Week_based_on_ProcessDate__c  =  0) &amp;&amp; (of_the_Week_Today__c = 1  || of_the_Week_Today__c = 6  || of_the_Week_Today__c = 0), TRUE, 

FALSE
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_the_Week_Today__c</fullName>
        <formula>MOD(
 TODAY() - DATE(1900,1,7) ,7
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of the Week Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>30 Days worth of data based on Scrub Date (Scrub date includes manually scrubbed and auto resolved). Updated daily. Has data at the Rep Level.</description>
    <label>Big Ticket (R)</label>
    <nameField>
        <displayFormat>TR-{0000000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Big Tickets (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>